add commission message box

--- a/app/src/main/res/layout/list_transactions.xml
+++ b/app/src/main/res/layout/list_transactions.xml
@@ -93,7 +93,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_centerInParent="true"
-                        android:background="@drawable/ic_sell" />
+                        android:background="@drawable/ic_receive" />
 
 
                 </RelativeLayout>
@@ -106,10 +106,11 @@
                     android:fontFamily="@font/roboto_light"
                     android:gravity="left|center"
                     android:paddingLeft="10dp"
-                    android:text="Sell"
+                    android:text="Receive"
                     android:textSize="16sp" />
 
                 <TextView
+                    android:textColor="@color/green"
                     android:id="@+id/tv_amount_receive"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
