--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#3B5998</color>
     <color name="pink">#F63E62</color>
+    <color name="green">#32CD32</color>
 </resources>
