--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".view.MainActivity">
 
     <LinearLayout
+        android:layout_above="@+id/btn_convert"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
