--- a/app/src/main/res/layout/activity_convert.xml
+++ b/app/src/main/res/layout/activity_convert.xml
@@ -15,7 +15,7 @@
         <TextView
             android:id="@+id/tv_header"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="70dp"
             android:background="@color/blue"
             android:fontFamily="@font/roboto_black"
             android:gravity="center"
@@ -80,9 +80,11 @@
     </LinearLayout>
 
     <Button
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/btn_round_corner"
         android:id="@+id/btn_submit"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
