--- a/app/src/main/res/layout/list_balances.xml
+++ b/app/src/main/res/layout/list_balances.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
     android:layout_height="60dp"
     android:orientation="horizontal"
     android:weightSum="100">
